wrapped network creation in a documented function

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5116e841-87c8-4e79-9c1f-6b740c7a9ef9",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "14298db4-2590-4992-a49c-d6c93d962b44",
    "metadata": {},
    "outputs": [],
@@ -144,29 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "96f77985-1287-4641-bd45-9dbd873c0da4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 8.02 s, sys: 456 ms, total: 8.48 s\n",
-      "Wall time: 3min 39s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(5332, 8)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "research_df = search_arxiv(\n",
@@ -202,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ec9d6b08-ef13-4ac1-bc69-61529d33679e",
    "metadata": {},
    "outputs": [],
@@ -217,13 +198,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_network(df):\n",
+    "def generate_network(df, node_col = 'article_id', edge_col = 'main_topic'):\n",
     "    '''\n",
     "    This function will generate a article to article network given an input DataFrame.\n",
-    "    '''\n",
+    "    It will do so by creating an edge_dictionary where each key is going to be a node\n",
+    "    referenced by unique values in node_col and the values will be a list of other nodes\n",
+    "    connected to the key through the edge_col.\n",
     "    \n",
-    "    pass"
+    "    params:\n",
+    "        df (DataFrame) : The dataset which holds the node and edge columns\n",
+    "        node_col (String) : The column name associated to the nodes of the network\n",
+    "        edge_col (String) : The column name associated to the edges of the network\n",
+    "        \n",
+    "    returns:\n",
+    "        A networkx graph corresponding to the input dataset\n",
+    "        \n",
+    "    example:\n",
+    "        generate_network(\n",
+    "            research_df,\n",
+    "            node_col = 'article_id',\n",
+    "            edge_col = 'main_topic'\n",
+    "        )\n",
+    "    '''\n",
+    "    edge_dct = {}\n",
+    "    for i,g in df.groupby(node_col):\n",
+    "        topics = df[edge_col].unique()\n",
+    "        edge_df = df[(df[node_col] != i) & (df[edge_col].isin(topics))]\n",
+    "        edges = list(edge_df[node_col].unique())\n",
+    "        edge_dct[i] = edges\n",
+    "    \n",
+    "    # create nx network\n",
+    "    g = nx.Graph(edge_dct)\n",
+    "    return g"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6878f12-a0bc-4070-8fca-689b01154970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time research_network = generate_network(research_df, node_col = 'article_id', edge_col = 'main_topic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8ca352-20f3-4358-95c7-2bcf444d09eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00cb2bd2-50a5-480c-9e1d-194163497ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca946a47-125a-41a5-9a36-bfd1543d6ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,8 +355,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d16641c8-527f-4836-91eb-64fd20312914",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Review of automated time series forecasting pi...</td>\n",
+       "      <td>2022-02-03 17:26:27+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[Stefan Meisenbacher, Marian Turowski, Kaleb P...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>astro-ph.IM</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
+       "      <td>2022-01-31 18:02:09+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
+       "      <td>2022-01-31 18:02:09+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5330</th>\n",
+       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
+       "      <td>2022-01-25 14:25:26+00:00</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5330</th>\n",
+       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
+       "      <td>2022-01-25 14:25:26+00:00</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5330</th>\n",
+       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
+       "      <td>2022-01-25 14:25:26+00:00</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>math.IT</td>\n",
+       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5331</th>\n",
+       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
+       "      <td>2022-01-25 14:03:57+00:00</td>\n",
+       "      <td>4513</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>[Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5331</th>\n",
+       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
+       "      <td>2022-01-25 14:03:57+00:00</td>\n",
+       "      <td>4513</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12161 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  title  \\\n",
+       "0     Review of automated time series forecasting pi...   \n",
+       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "...                                                 ...   \n",
+       "5330  Distributed Image Transmission using Deep Join...   \n",
+       "5330  Distributed Image Transmission using Deep Join...   \n",
+       "5330  Distributed Image Transmission using Deep Join...   \n",
+       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
+       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
+       "\n",
+       "                          date  article_id                                url  \\\n",
+       "0    2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
+       "1    2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "1    2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "2    2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
+       "2    2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
+       "...                        ...         ...                                ...   \n",
+       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
+       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
+       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
+       "5331 2022-01-25 14:03:57+00:00        4513  http://arxiv.org/pdf/2201.10328v3   \n",
+       "5331 2022-01-25 14:03:57+00:00        4513  http://arxiv.org/pdf/2201.10328v3   \n",
+       "\n",
+       "       main_topic   all_topics  \\\n",
+       "0           cs.LG        cs.LG   \n",
+       "1     astro-ph.EP  astro-ph.EP   \n",
+       "1     astro-ph.EP  astro-ph.IM   \n",
+       "2           cs.LG        cs.LG   \n",
+       "2           cs.LG        cs.AI   \n",
+       "...           ...          ...   \n",
+       "5330        cs.IT        cs.IT   \n",
+       "5330        cs.IT        cs.LG   \n",
+       "5330        cs.IT      math.IT   \n",
+       "5331        cs.AI        cs.AI   \n",
+       "5331        cs.AI        cs.LG   \n",
+       "\n",
+       "                                                authors  year  \n",
+       "0     [Stefan Meisenbacher, Marian Turowski, Kaleb P...  2022  \n",
+       "1     [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
+       "1     [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
+       "2     [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
+       "2     [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
+       "...                                                 ...   ...  \n",
+       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
+       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
+       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
+       "5331  [Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...  2022  \n",
+       "5331  [Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...  2022  \n",
+       "\n",
+       "[12161 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9987c2da-a2ab-4b78-b2a3-4d4a9a56ed8d",
    "metadata": {},
    "outputs": [],
    "source": []
