--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -144,10 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "96f77985-1287-4641-bd45-9dbd873c0da4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8.06 s, sys: 462 ms, total: 8.52 s\n",
+      "Wall time: 3min 53s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5332, 8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "research_df = search_arxiv(\n",
@@ -183,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ec9d6b08-ef13-4ac1-bc69-61529d33679e",
    "metadata": {},
    "outputs": [],
@@ -193,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8cab8e97-3700-4d7d-b1ef-13a94584d92a",
    "metadata": {},
    "outputs": [],
@@ -234,18 +253,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f6878f12-a0bc-4070-8fca-689b01154970",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 33.9 s, sys: 2.57 s, total: 36.4 s\n",
+      "Wall time: 39.5 s\n"
+     ]
+    }
+   ],
    "source": [
     "%time research_network = generate_network(research_df, node_col = 'article_id', edge_col = 'main_topic')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f8ca352-20f3-4358-95c7-2bcf444d09eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: \n",
+      "Type: Graph\n",
+      "Number of nodes: 4519\n",
+      "Number of edges: 10208421\n",
+      "Average degree: 4518.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.info(research_network))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56b5eb69-e758-4dc6-a503-1cde7883d696",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 39.9 s, sys: 3.48 s, total: 43.4 s\n",
+      "Wall time: 46.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time all_topic_nx = generate_network(r_df, node_col = 'article_id', edge_col = 'all_topics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "00cb2bd2-50a5-480c-9e1d-194163497ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: \n",
+      "Type: Graph\n",
+      "Number of nodes: 4519\n",
+      "Number of edges: 10208421\n",
+      "Average degree: 4518.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.info(all_topic_nx))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66415397-621f-4ae9-9e2c-388359e33478",
+   "metadata": {},
+   "source": [
+    "## Node2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "066bf93a-ad52-491b-adb1-79fe6481ab9a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +352,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00cb2bd2-50a5-480c-9e1d-194163497ab8",
+   "id": "afca8a21-5aa8-493a-ba57-e83695637ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997a904f-fc1c-4a60-972c-94f39143f64d",
+   "metadata": {},
+   "source": [
+    "## Generate Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08f66aff-fe52-4ba1-85e4-32d9ec1cb5aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,328 +382,84 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "dfa77b56-7a2f-4f98-96e9-561c7b9935ee",
+   "cell_type": "markdown",
+   "id": "45fe205e-cc61-4f91-acce-449792808bb0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.76 s, sys: 428 ms, total: 5.19 s\n",
-      "Wall time: 5 s\n"
-     ]
-    }
-   ],
    "source": [
-    "%%time\n",
-    "edge_dct = {}\n",
-    "for i,g in r_df.groupby('article_id'):\n",
-    "    top = g.all_topics.unique()\n",
-    "    edge_df = r_df[(r_df.article_id != i) & (r_df.all_topics.isin(top))]\n",
-    "    connection_nodes = list(edge_df.article_id.unique())\n",
-    "    edge_dct[i] = connection_nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "5f8789c2-b4d1-4a89-8348-28870608cc34",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.06 s, sys: 297 ms, total: 4.36 s\n",
-      "Wall time: 4.48 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time g = nx.Graph(edge_dct)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "d118bca1-e620-4348-8d76-16f53ee8265c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: \n",
-      "Type: Graph\n",
-      "Number of nodes: 4514\n",
-      "Number of edges: 1580377\n",
-      "Average degree: 700.2113\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(nx.info(g))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "053e56d3-1f74-4b22-ba27-f972aa1cc0d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4514"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r_df.article_id.nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "d16641c8-527f-4836-91eb-64fd20312914",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>date</th>\n",
-       "      <th>article_id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>main_topic</th>\n",
-       "      <th>all_topics</th>\n",
-       "      <th>authors</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Review of automated time series forecasting pi...</td>\n",
-       "      <td>2022-02-03 17:26:27+00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[Stefan Meisenbacher, Marian Turowski, Kaleb P...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
-       "      <td>2022-02-01 06:56:20+00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
-       "      <td>astro-ph.EP</td>\n",
-       "      <td>astro-ph.EP</td>\n",
-       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
-       "      <td>2022-02-01 06:56:20+00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
-       "      <td>astro-ph.EP</td>\n",
-       "      <td>astro-ph.IM</td>\n",
-       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
-       "      <td>2022-01-31 18:02:09+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
-       "      <td>2022-01-31 18:02:09+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5330</th>\n",
-       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
-       "      <td>2022-01-25 14:25:26+00:00</td>\n",
-       "      <td>4512</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
-       "      <td>cs.IT</td>\n",
-       "      <td>cs.IT</td>\n",
-       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5330</th>\n",
-       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
-       "      <td>2022-01-25 14:25:26+00:00</td>\n",
-       "      <td>4512</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
-       "      <td>cs.IT</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5330</th>\n",
-       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
-       "      <td>2022-01-25 14:25:26+00:00</td>\n",
-       "      <td>4512</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
-       "      <td>cs.IT</td>\n",
-       "      <td>math.IT</td>\n",
-       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5331</th>\n",
-       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
-       "      <td>2022-01-25 14:03:57+00:00</td>\n",
-       "      <td>4513</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>[Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5331</th>\n",
-       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
-       "      <td>2022-01-25 14:03:57+00:00</td>\n",
-       "      <td>4513</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12161 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  title  \\\n",
-       "0     Review of automated time series forecasting pi...   \n",
-       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
-       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
-       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
-       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
-       "...                                                 ...   \n",
-       "5330  Distributed Image Transmission using Deep Join...   \n",
-       "5330  Distributed Image Transmission using Deep Join...   \n",
-       "5330  Distributed Image Transmission using Deep Join...   \n",
-       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
-       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
-       "\n",
-       "                          date  article_id                                url  \\\n",
-       "0    2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
-       "1    2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
-       "1    2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
-       "2    2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
-       "2    2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
-       "...                        ...         ...                                ...   \n",
-       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
-       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
-       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
-       "5331 2022-01-25 14:03:57+00:00        4513  http://arxiv.org/pdf/2201.10328v3   \n",
-       "5331 2022-01-25 14:03:57+00:00        4513  http://arxiv.org/pdf/2201.10328v3   \n",
-       "\n",
-       "       main_topic   all_topics  \\\n",
-       "0           cs.LG        cs.LG   \n",
-       "1     astro-ph.EP  astro-ph.EP   \n",
-       "1     astro-ph.EP  astro-ph.IM   \n",
-       "2           cs.LG        cs.LG   \n",
-       "2           cs.LG        cs.AI   \n",
-       "...           ...          ...   \n",
-       "5330        cs.IT        cs.IT   \n",
-       "5330        cs.IT        cs.LG   \n",
-       "5330        cs.IT      math.IT   \n",
-       "5331        cs.AI        cs.AI   \n",
-       "5331        cs.AI        cs.LG   \n",
-       "\n",
-       "                                                authors  year  \n",
-       "0     [Stefan Meisenbacher, Marian Turowski, Kaleb P...  2022  \n",
-       "1     [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
-       "1     [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
-       "2     [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
-       "2     [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
-       "...                                                 ...   ...  \n",
-       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
-       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
-       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
-       "5331  [Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...  2022  \n",
-       "5331  [Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...  2022  \n",
-       "\n",
-       "[12161 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r_df"
+    "## Train Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9987c2da-a2ab-4b78-b2a3-4d4a9a56ed8d",
+   "id": "d16a8551-a343-4807-bab1-393e1293fbd6",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2309d219-ecc9-46b0-9fcb-03d9a7afb64d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880d1153-1e48-499e-9dc0-122c3425a705",
+   "metadata": {},
+   "source": [
+    "## Model Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67a09428-6855-4737-8041-4caead755055",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae8e831-6341-49d6-883a-7b4761f2a789",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463d29d4-49ad-43c9-b394-cc3088009dbe",
+   "metadata": {},
+   "source": [
+    "## Generate Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3d929e1-d590-4ed7-b835-b21e60d9008c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a73e4de5-9e5e-4ef8-8cb8-0adb6fd95cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b67e10-927d-4fc7-bc3b-0ef3115f7c19",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
