ran node2vec algorithm on the research network

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,12 @@
     "import numpy as np\n",
     "import arxiv\n",
     "\n",
-    "from node2vec import node2vec as n2v"
+    "from node2vec import Node2Vec as n2v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5116e841-87c8-4e79-9c1f-6b740c7a9ef9",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "14298db4-2590-4992-a49c-d6c93d962b44",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "96f77985-1287-4641-bd45-9dbd873c0da4",
    "metadata": {},
    "outputs": [
@@ -152,17 +152,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.06 s, sys: 462 ms, total: 8.52 s\n",
-      "Wall time: 3min 53s\n"
+      "CPU times: user 1.04 s, sys: 63 ms, total: 1.11 s\n",
+      "Wall time: 11.2 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(5332, 8)"
+       "(646, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
     "%%time\n",
     "research_df = search_arxiv(\n",
     "    queries = queries,\n",
-    "    max_results = 1000\n",
+    "    max_results = 100\n",
     ")\n",
     "research_df.shape"
    ]
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ec9d6b08-ef13-4ac1-bc69-61529d33679e",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8cab8e97-3700-4d7d-b1ef-13a94584d92a",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f6878f12-a0bc-4070-8fca-689b01154970",
    "metadata": {},
    "outputs": [
@@ -261,8 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33.9 s, sys: 2.57 s, total: 36.4 s\n",
-      "Wall time: 39.5 s\n"
+      "CPU times: user 724 ms, sys: 45.2 ms, total: 769 ms\n",
+      "Wall time: 789 ms\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5f8ca352-20f3-4358-95c7-2bcf444d09eb",
    "metadata": {},
    "outputs": [
@@ -282,9 +282,9 @@
      "text": [
       "Name: \n",
       "Type: Graph\n",
-      "Number of nodes: 4519\n",
-      "Number of edges: 10208421\n",
-      "Average degree: 4518.0000\n"
+      "Number of nodes: 562\n",
+      "Number of edges: 157641\n",
+      "Average degree: 561.0000\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "56b5eb69-e758-4dc6-a503-1cde7883d696",
    "metadata": {},
    "outputs": [
@@ -302,8 +302,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.9 s, sys: 3.48 s, total: 43.4 s\n",
-      "Wall time: 46.3 s\n"
+      "CPU times: user 729 ms, sys: 19.1 ms, total: 748 ms\n",
+      "Wall time: 748 ms\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "00cb2bd2-50a5-480c-9e1d-194163497ab8",
    "metadata": {},
    "outputs": [
@@ -323,9 +323,9 @@
      "text": [
       "Name: \n",
       "Type: Graph\n",
-      "Number of nodes: 4519\n",
-      "Number of edges: 10208421\n",
-      "Average degree: 4518.0000\n"
+      "Number of nodes: 562\n",
+      "Number of edges: 157641\n",
+      "Average degree: 561.0000\n"
      ]
     }
    ],
@@ -346,8 +346,25 @@
    "execution_count": null,
    "id": "066bf93a-ad52-491b-adb1-79fe6481ab9a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a456c24533d49cfa98ca2aab2c1a63c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Computing transition probabilities:   0%|          | 0/562 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%time g_emb = n2v(research_network, dimensions=16)"
+   ]
   },
   {
    "cell_type": "code",
@@ -355,7 +372,37 @@
    "id": "afca8a21-5aa8-493a-ba57-e83695637ff5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "WINDOW = 1 # Node2Vec fit window\n",
+    "MIN_COUNT = 1 # Node2Vec min. count\n",
+    "BATCH_WORDS = 4 # Node2Vec batch words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ce72cd-db36-430f-b65e-f7b9b9604120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdl = g_emb.fit(\n",
+    "    window=WINDOW,\n",
+    "    min_count=MIN_COUNT,\n",
+    "    batch_words=BATCH_WORDS\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eda734d7-6b08-4a76-aca9-6a54948c1e70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_node = '1'\n",
+    "for s in mdl.wv.most_similar(input_node, topn = 10):\n",
+    "    print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
