converted embeddings into a dataframe

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -409,7 +409,7 @@
    "id": "997a904f-fc1c-4a60-972c-94f39143f64d",
    "metadata": {},
    "source": [
-    "## Generate Embeddings"
+    "## Generate Embeddings DataFrame"
    ]
   },
   {
@@ -418,7 +418,14 @@
    "id": "08f66aff-fe52-4ba1-85e4-32d9ec1cb5aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emb_df = (\n",
+    "    pd.DataFrame(\n",
+    "        [mdl.wv.get_vector(str(n)) for n in research_network.nodes()],\n",
+    "        index = G.nodes\n",
+    "    )\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -426,7 +433,9 @@
    "id": "ca946a47-125a-41a5-9a36-bfd1543d6ccb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emb_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
