--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "066bf93a-ad52-491b-adb1-79fe6481ab9a",
    "metadata": {},
    "outputs": [
@@ -360,6 +360,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating walks (CPU: 1): 100%|██████████| 10/10 [00:25<00:00,  2.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5min 57s, sys: 4.73 s, total: 6min 2s\n",
+      "Wall time: 6min 3s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -368,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "afca8a21-5aa8-493a-ba57-e83695637ff5",
    "metadata": {},
    "outputs": [],
@@ -380,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f5ce72cd-db36-430f-b65e-f7b9b9604120",
    "metadata": {},
    "outputs": [],
@@ -394,10 +416,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "eda734d7-6b08-4a76-aca9-6a54948c1e70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('211', 0.9128776788711548)\n",
+      "('521', 0.911181628704071)\n",
+      "('40', 0.9052026271820068)\n",
+      "('124', 0.9023550152778625)\n",
+      "('287', 0.9022865891456604)\n",
+      "('132', 0.8979486227035522)\n",
+      "('138', 0.8978955745697021)\n",
+      "('467', 0.8966530561447144)\n",
+      "('170', 0.8965973854064941)\n",
+      "('531', 0.8943594098091125)\n"
+     ]
+    }
+   ],
    "source": [
     "input_node = '1'\n",
     "for s in mdl.wv.most_similar(input_node, topn = 10):\n",
@@ -414,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "08f66aff-fe52-4ba1-85e4-32d9ec1cb5aa",
    "metadata": {},
    "outputs": [],
@@ -422,17 +461,184 @@
     "emb_df = (\n",
     "    pd.DataFrame(\n",
     "        [mdl.wv.get_vector(str(n)) for n in research_network.nodes()],\n",
-    "        index = G.nodes\n",
+    "        index = research_network.nodes\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ca946a47-125a-41a5-9a36-bfd1543d6ccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.128435</td>\n",
+       "      <td>-0.049074</td>\n",
+       "      <td>0.132459</td>\n",
+       "      <td>-0.102469</td>\n",
+       "      <td>0.844356</td>\n",
+       "      <td>0.267155</td>\n",
+       "      <td>0.225001</td>\n",
+       "      <td>-0.419419</td>\n",
+       "      <td>-0.135403</td>\n",
+       "      <td>-0.002126</td>\n",
+       "      <td>-0.086459</td>\n",
+       "      <td>-0.163671</td>\n",
+       "      <td>-0.006720</td>\n",
+       "      <td>0.043489</td>\n",
+       "      <td>0.237503</td>\n",
+       "      <td>0.019430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.096374</td>\n",
+       "      <td>0.018799</td>\n",
+       "      <td>0.035309</td>\n",
+       "      <td>-0.023356</td>\n",
+       "      <td>0.524462</td>\n",
+       "      <td>0.257324</td>\n",
+       "      <td>0.579559</td>\n",
+       "      <td>-0.595028</td>\n",
+       "      <td>-0.237835</td>\n",
+       "      <td>-0.113283</td>\n",
+       "      <td>0.068707</td>\n",
+       "      <td>-0.420708</td>\n",
+       "      <td>0.095696</td>\n",
+       "      <td>-0.093512</td>\n",
+       "      <td>0.159015</td>\n",
+       "      <td>0.001616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.039072</td>\n",
+       "      <td>-0.151964</td>\n",
+       "      <td>0.139572</td>\n",
+       "      <td>-0.417229</td>\n",
+       "      <td>0.720359</td>\n",
+       "      <td>0.410377</td>\n",
+       "      <td>0.155613</td>\n",
+       "      <td>-0.352993</td>\n",
+       "      <td>0.041561</td>\n",
+       "      <td>-0.395659</td>\n",
+       "      <td>0.130601</td>\n",
+       "      <td>-0.000469</td>\n",
+       "      <td>-0.223700</td>\n",
+       "      <td>-0.164071</td>\n",
+       "      <td>0.044049</td>\n",
+       "      <td>0.179982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.163633</td>\n",
+       "      <td>0.070856</td>\n",
+       "      <td>-0.186758</td>\n",
+       "      <td>-0.188014</td>\n",
+       "      <td>0.689734</td>\n",
+       "      <td>0.305346</td>\n",
+       "      <td>0.171601</td>\n",
+       "      <td>-0.403026</td>\n",
+       "      <td>-0.155164</td>\n",
+       "      <td>-0.409362</td>\n",
+       "      <td>0.080607</td>\n",
+       "      <td>-0.192482</td>\n",
+       "      <td>0.092849</td>\n",
+       "      <td>0.082888</td>\n",
+       "      <td>0.109581</td>\n",
+       "      <td>0.110443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.094581</td>\n",
+       "      <td>-0.131820</td>\n",
+       "      <td>0.265450</td>\n",
+       "      <td>-0.071456</td>\n",
+       "      <td>0.753454</td>\n",
+       "      <td>0.235651</td>\n",
+       "      <td>0.430763</td>\n",
+       "      <td>-0.240429</td>\n",
+       "      <td>-0.041164</td>\n",
+       "      <td>-0.160510</td>\n",
+       "      <td>-0.171398</td>\n",
+       "      <td>-0.306116</td>\n",
+       "      <td>0.137343</td>\n",
+       "      <td>-0.272153</td>\n",
+       "      <td>0.346461</td>\n",
+       "      <td>0.089041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0         1         2         3         4         5         6   \\\n",
+       "0  0.128435 -0.049074  0.132459 -0.102469  0.844356  0.267155  0.225001   \n",
+       "1  0.096374  0.018799  0.035309 -0.023356  0.524462  0.257324  0.579559   \n",
+       "2 -0.039072 -0.151964  0.139572 -0.417229  0.720359  0.410377  0.155613   \n",
+       "3  0.163633  0.070856 -0.186758 -0.188014  0.689734  0.305346  0.171601   \n",
+       "4  0.094581 -0.131820  0.265450 -0.071456  0.753454  0.235651  0.430763   \n",
+       "\n",
+       "         7         8         9         10        11        12        13  \\\n",
+       "0 -0.419419 -0.135403 -0.002126 -0.086459 -0.163671 -0.006720  0.043489   \n",
+       "1 -0.595028 -0.237835 -0.113283  0.068707 -0.420708  0.095696 -0.093512   \n",
+       "2 -0.352993  0.041561 -0.395659  0.130601 -0.000469 -0.223700 -0.164071   \n",
+       "3 -0.403026 -0.155164 -0.409362  0.080607 -0.192482  0.092849  0.082888   \n",
+       "4 -0.240429 -0.041164 -0.160510 -0.171398 -0.306116  0.137343 -0.272153   \n",
+       "\n",
+       "         14        15  \n",
+       "0  0.237503  0.019430  \n",
+       "1  0.159015  0.001616  \n",
+       "2  0.044049  0.179982  \n",
+       "3  0.109581  0.110443  \n",
+       "4  0.346461  0.089041  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emb_df.head()"
    ]
