--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -444,6 +444,173 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "46a42a8f-0018-48ac-b836-e6c79d356303",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>astro-ph.IM</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "\n",
+       "                       date  article_id                                url  \\\n",
+       "1 2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "1 2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "\n",
+       "    main_topic   all_topics  \\\n",
+       "1  astro-ph.EP  astro-ph.EP   \n",
+       "1  astro-ph.EP  astro-ph.IM   \n",
+       "\n",
+       "                                             authors  year  \n",
+       "1  [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
+       "1  [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_df[r_df.article_id == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5fdbe180-b1d1-43a9-b9c6-4cfbd3b664e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>577</th>\n",
+       "      <td>Topological Defects Induced High-Spin Quartet ...</td>\n",
+       "      <td>2022-02-08 13:34:05+00:00</td>\n",
+       "      <td>521</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.03853v1</td>\n",
+       "      <td>cond-mat.mes-hall</td>\n",
+       "      <td>cond-mat.mes-hall</td>\n",
+       "      <td>[Can Li, Yu Liu, Yufeng Liu, Fu-Hua Xue, Danda...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title  \\\n",
+       "577  Topological Defects Induced High-Spin Quartet ...   \n",
+       "\n",
+       "                         date  article_id                                url  \\\n",
+       "577 2022-02-08 13:34:05+00:00         521  http://arxiv.org/pdf/2202.03853v1   \n",
+       "\n",
+       "            main_topic         all_topics  \\\n",
+       "577  cond-mat.mes-hall  cond-mat.mes-hall   \n",
+       "\n",
+       "                                               authors  year  \n",
+       "577  [Can Li, Yu Liu, Yufeng Liu, Fu-Hua Xue, Danda...  2022  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_df[r_df.article_id == 521]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "997a904f-fc1c-4a60-972c-94f39143f64d",
    "metadata": {},
