added documentation around ndoe2vec

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -342,6 +342,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e97bc9ab-f39b-4ef8-833c-6cbe7e1e65ef",
+   "metadata": {},
+   "source": [
+    "This component will cover running node2vec on the graph generated above and creating the associated node embeddings for that network. These embeddings will play a crucial role coming up as they're the main features necessary for building a link prediction model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "066bf93a-ad52-491b-adb1-79fe6481ab9a",
