added component to get hammard embeddings

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -30,10 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'stellargraph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-ebc76ddf2c14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnode2vec\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNode2Vec\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mn2v\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnode2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHadamardEmbedder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstellargraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEdgeSplitter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'stellargraph'"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "import scipy as sp\n",
@@ -41,7 +53,8 @@
     "import numpy as np\n",
     "import arxiv\n",
     "\n",
-    "from node2vec import Node2Vec as n2v"
+    "from node2vec import Node2Vec as n2v\n",
+    "from node2vec.edges import HadamardEmbedder"
    ]
   },
   {
@@ -627,6 +640,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c27f5562-4eb0-48f5-91a0-877edbe2c8ad",
+   "metadata": {},
+   "source": [
+    "The HadamardEmbedder embedding algorithm is applied to the result of the Node2Vec algorithm (keyed_vectors=model.wv) used in order to map each edge of the graph in a vector of two dimensions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "230a2653-a814-4915-b217-904e31cf024d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_embs = HadamardEmbedder(keyed_vectors=mdl.wv)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "08f66aff-fe52-4ba1-85e4-32d9ec1cb5aa",
@@ -832,7 +863,9 @@
    "id": "d16a8551-a343-4807-bab1-393e1293fbd6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_embeddings = [edges_embs[str(x[0]),str(x[1])] for x in samples_train]"
+   ]
   },
   {
    "cell_type": "code",
